--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -3,20 +3,36 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+}
+
+.resources.list[data-block-status="loaded"] {
+    margin: 15px;
+    max-height: 500px;
+    overflow-y: auto;
 }
 
 .resources .article-card {
     margin: 15px;
 }
 
+.resources.list .article-card {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .resources .article-card .description {
     display: none;
 }
 
+.resources.list .article-card .description {
+    display: unset;
+    grid-column: 2;
+}
+
 /* Tablet styles */
 @media only screen and (min-width: 600px) {
-    .resources[data-block-status="loaded"] {
+    .resources[data-block-status="loaded"]:not(.list) {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
