--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,14 +1,91 @@
 footer {
-  padding: 2rem;
-  background-color: var(--overlay-background-color);
-  font-size: var(--body-font-size-s);
+  padding: 25px 0;
+  background: #f6f6f6 url("/icons/bg-footer.jpg") no-repeat;
+  background-size: cover;
+  border-top: 50px solid #000;
+  border-bottom: 100px solid #000;
 }
 
 footer .footer {
-  max-width: 1200px;
+  max-width: 1140px;
   margin: auto;
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 
-footer .footer p {
-  margin: 0;
+.footer-logo {
+  padding: 25px 0;
+}
+
+.footer .footer-logolinks {
+  padding: 0 15px 0 0;
+  box-sizing: border-box;
+}
+
+.footer .footer-links p,
+.footer .footer-links a {
+  color: #202020;
+  font-size: 12px;
+}
+
+.footer .footer-links a:hover {
+  color: var(--link-hover-color);
+}
+
+.footer .footer-links p:first-child {
+  margin: 0 0 1rem;
+}
+
+.footer .footer-links p:nth-child(2) {
+  border-top: 1px solid #000;
+  padding: 10px 0 0;
+  margin: 5px 0 0;
+}
+
+/* stylelint-disable color-function-notation */
+.footer .footer-about {
+  padding: 20px 20px 5px 30px;
+  margin: 20px 0 0;
+  border: 1px solid #9e9e9e;
+  border-radius: 4px;
+  background: rgba(255, 255, 255, 75%);
+  max-width: none;
+  box-shadow: 0 3px 6px #183148;
+  box-sizing: border-box;
+  word-break: break-word;
+}
+
+.footer .footer-about-title {
+  color: #848484;
+  font-size: 24px;
+  font-weight: 400;
+  border-bottom: 1px solid #848484;
+  padding: 0 0 5px;
+}
+
+.footer .footer-about-content {
+  color: #848484;
+  font-size: 12px;
+  line-height: 14px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+/* desktop styles */
+@media only screen and (min-width: 600px) {
+  .footer.block {
+    display: flex;
+  }
+
+  .footer .footer-logolinks {
+    width: 66.67%;
+  }
+
+  .footer .footer-about {
+    width: 33.33%;
+    max-width: 330px;
+    margin: 0 15px;
+  }
 }
