--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -13,12 +13,11 @@ header nav {
     'hamburger brand tools' var(--nav-height)
     'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
-  gap: 0 2em;
   margin: auto;
-  max-width: 1264px;
   height: var(--nav-height);
   padding: 0 1rem;
   font-family: var(--body-font-family);
+  background: #000;
 }
 
 header nav[aria-expanded="true"] {
@@ -32,7 +31,7 @@ header nav[aria-expanded="true"] {
 
 @media (min-width: 600px) {
   header nav {
-    padding: 0 2rem;
+    padding: 0 15px;
   }
 }
 
@@ -141,10 +140,10 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
-  font-size: var(--heading-font-size-s);
-  font-weight: 700;
+  font-size: var(--heading-font-size-l);
   line-height: 1;
+  color: #f3f3f3;
+  font-weight: 600;
 }
 
 header nav .nav-brand img {
@@ -172,6 +171,7 @@ header nav .nav-sections ul  {
   padding-left: 0;
   font-size: var(--body-font-size-s);
   font-weight: 500;
+  color: #f3f3f3;
 }
 
 header nav .nav-sections ul > li {
@@ -199,22 +199,8 @@ header nav .nav-sections ul > li > ul > li {
 
   header nav .nav-sections .nav-drop {
     position: relative;
-    padding-right: 16px;
+    padding: 16px;
     cursor: pointer;
-  }
-
-  header nav .nav-sections .nav-drop::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: .5em;
-    right: 2px;
-    transform: rotate(135deg);
-    width: 6px;
-    height: 6px;
-    border: 2px solid currentcolor;
-    border-radius: 0 1px 0 0;
-    border-width: 2px 2px 0 0;
   }
 
   header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
@@ -225,15 +211,21 @@ header nav .nav-sections ul > li > ul > li {
 
   header nav .nav-sections ul {
     display: flex;
-    gap: 2em;
     margin: 0;
-    font-size: var(--body-font-size-xs);
+    font-size: var(--body-font-size-s);
+    justify-content: end;
   }
 
   header nav .nav-sections > ul > li {
     flex: 0 1 auto;
     position: relative;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: var(--heading-font-size-l);
+    color: #f3f3f3;
+    padding: 16px 12px 16px 2px;
+    border: none;
+    cursor: pointer;
+    margin: 0 36px;
   }
 
   header nav .nav-sections > ul > li > ul {
@@ -244,32 +236,46 @@ header nav .nav-sections ul > li > ul > li {
   header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
     display: block;
     position: absolute;
-    left: -1em;
-    width: 200px;
+    min-width: 160px;
     margin-top: 12px;
-    padding: 1em;
-    background-color: var(--highlight-background-color);
+    background-color: var(--header-background-color);
     white-space: initial;
+    border-top: 2px solid #00aeef;
   }
 
-  header nav .nav-sections > ul > li > ul::before {
-    content: '';
-    position: absolute;
-    top: -8px;
-    left: 8px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--highlight-background-color);
+  header nav .nav-sections > ul > li[aria-expanded="true"] > ul a:hover {
+    color: var(--link-hover-color);
+    text-decoration: none;
   }
 
   header nav .nav-sections > ul > li > ul > li {
-    padding: 8px 0;
+    padding: 12px 16px;
   }
 }
 
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+  padding-right: 10px;
+}
+
+.input-search {
+  color: #5C5C5C;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  font-weight: 600;
+  padding: 2px 30px 3px;
+  display: block;
+  margin: 0;
+  width: 142px;
+  border: 1px solid #707070;
+  transition: width 0.4s cubic-bezier(0, 0.795, 0, 1);
+}
+
+.input-search:focus {
+  width: 300px;
+  text-align: left;
+  padding-left: 10px;
+  z-index: -1;
 }
