--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
   --background-color: #fff;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
+  --header-background-color: #000;
   --text-color: #212529;
 
   /* fonts */
