added article props

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,3 +253,29 @@ main .section {
 main .section.highlight {
   background-color: var(--highlight-background-color);
 }
+
+.header-list {
+  color: #555;
+  font-size: 15px;
+  font-style: italic;
+
+}
+
+.article-key {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+  text-align: right;
+}
+
+
+.article-key-list {
+  display: inline-block;
+  text-align: left;
+}
+
+.article-key-item {
+  display: block;
+}
