--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,8 +10,7 @@ header nav {
   box-sizing: border-box;
   display: grid;
   grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
+    'brand hamburger' var(--nav-height);
   align-items: center;
   margin: auto;
   height: var(--nav-height);
@@ -22,11 +21,10 @@ header nav {
 
 header nav[aria-expanded="true"] {
   grid-template:
-    'hamburger brand' var(--nav-height)
-    'sections sections' 1fr
-    'tools tools' var(--nav-height) / auto 1fr;
-  overflow-y: auto;
-  min-height: 100vh;
+    'brand hamburger' var(--nav-height)
+    'sections sections' min-content
+    'tools tools' min-content;
+    min-height: 100vh;
 }
 
 @media (min-width: 600px) {
@@ -59,22 +57,32 @@ header nav a:any-link {
 /* hamburger */
 header nav .nav-hamburger {
   grid-area: hamburger;
-  height: 22px;
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
 }
 
 header nav .nav-hamburger button {
-  height: 22px;
   margin: 0;
-  border: 0;
-  border-radius: 0;
-  padding: 0;
-  background-color: var(--background-color);
-  color: inherit;
+  color: black;
   overflow: initial;
   text-overflow: initial;
   white-space: initial;
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+header nav .nav-hamburger button:focus, header nav .nav-hamburger button:hover {
+  background-color: black;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+header nav .nav-hamburger button .nav-hamburger-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  width: 30px;
+  height: 30px;
 }
 
 header nav .nav-hamburger-icon,
@@ -86,20 +94,6 @@ header nav .nav-hamburger-icon::after {
   width: 20px;
 }
 
-header nav .nav-hamburger-icon::before,
-header nav .nav-hamburger-icon::after {
-  content: '';
-  position: absolute;
-  background: currentcolor;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon,
-header nav[aria-expanded="false"] .nav-hamburger-icon::before,
-header nav[aria-expanded="false"] .nav-hamburger-icon::after {
-  height: 2px;
-  border-radius: 2px;
-  background: currentcolor;
-}
 
 header nav[aria-expanded="false"] .nav-hamburger-icon::before {
   top: -6px;
@@ -107,10 +101,6 @@ header nav[aria-expanded="false"] .nav-hamburger-icon::before {
 
 header nav[aria-expanded="false"] .nav-hamburger-icon::after {
   top: 6px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon {
-  height: 22px;
 }
 
 header nav[aria-expanded="true"] .nav-hamburger-icon::before,
@@ -161,9 +151,9 @@ header nav .nav-sections {
 }
 
 header nav[aria-expanded="true"] .nav-sections {
-  display: block;
+  display: flex;
   visibility: visible;
-  align-self: start;
+  justify-content: center;
 }
 
 header nav .nav-sections ul  {
@@ -186,6 +176,68 @@ header nav .nav-sections ul > li > ul > li {
   font-weight: 500;
 }
 
+header nav .nav-sections > ul > li > ul {
+  display: none;
+  position: relative;
+}
+
+header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
+  display: block;
+  position: absolute;
+  min-width: 160px;
+  margin-top: 12px;
+  background-color: var(--header-background-color);
+  white-space: initial;
+  border-top: 2px solid #00aeef;
+}
+
+header nav .nav-sections .nav-drop {
+  position: relative;
+  padding: 16px;
+  cursor: pointer;
+}
+
+header nav .nav-sections > ul > li {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  font-weight: 600;
+  font-size: var(--heading-font-size-l);
+  color: #f3f3f3;
+  padding: 16px 12px 16px 2px;
+  border: none;
+  cursor: pointer;
+  margin: 0 36px;
+}
+
+/* tools */
+header nav .nav-tools {
+  grid-area: tools;
+  padding-right: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.input-search {
+  color: #5C5C5C;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  font-weight: 600;
+  padding: 2px 30px 3px;
+  display: block;
+  margin: 0;
+  width: 100%;
+  border: 1px solid #707070;
+  transition: width 0.4s cubic-bezier(0, 0.795, 0, 1);
+}
+
+.input-search:focus {
+  width: 100%;
+  text-align: left;
+  padding-left: 10px;
+}
+
 @media (min-width: 900px) {
   header nav .nav-sections {
     display: block;
@@ -194,13 +246,7 @@ header nav .nav-sections ul > li > ul > li {
   }
 
   header nav[aria-expanded="true"] .nav-sections {
-    align-self: unset;
-  }
-
-  header nav .nav-sections .nav-drop {
-    position: relative;
-    padding: 16px;
-    cursor: pointer;
+    justify-content: end;
   }
 
   header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
@@ -216,33 +262,6 @@ header nav .nav-sections ul > li > ul > li {
     justify-content: end;
   }
 
-  header nav .nav-sections > ul > li {
-    flex: 0 1 auto;
-    position: relative;
-    font-weight: 600;
-    font-size: var(--heading-font-size-l);
-    color: #f3f3f3;
-    padding: 16px 12px 16px 2px;
-    border: none;
-    cursor: pointer;
-    margin: 0 36px;
-  }
-
-  header nav .nav-sections > ul > li > ul {
-    display: none;
-    position: relative;
-  }
-
-  header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
-    display: block;
-    position: absolute;
-    min-width: 160px;
-    margin-top: 12px;
-    background-color: var(--header-background-color);
-    white-space: initial;
-    border-top: 2px solid #00aeef;
-  }
-
   header nav .nav-sections > ul > li[aria-expanded="true"] > ul a:hover {
     color: var(--link-hover-color);
     text-decoration: none;
@@ -251,31 +270,14 @@ header nav .nav-sections ul > li > ul > li {
   header nav .nav-sections > ul > li > ul > li {
     padding: 12px 16px;
   }
+
+  .input-search {
+    width: 142px;
+  }
+  
+  .input-search:focus {
+    width: 300px;
+  }
+
 }
 
-/* tools */
-header nav .nav-tools {
-  grid-area: tools;
-  padding-right: 10px;
-}
-
-.input-search {
-  color: #5C5C5C;
-  font-size: 20px;
-  line-height: 24px;
-  text-align: center;
-  font-weight: 600;
-  padding: 2px 30px 3px;
-  display: block;
-  margin: 0;
-  width: 142px;
-  border: 1px solid #707070;
-  transition: width 0.4s cubic-bezier(0, 0.795, 0, 1);
-}
-
-.input-search:focus {
-  width: 300px;
-  text-align: left;
-  padding-left: 10px;
-  z-index: -1;
-}
