--- a/blocks/calendar/calendar.css
+++ b/blocks/calendar/calendar.css
@@ -43,8 +43,8 @@
 }
 
 .calendar .calendar-table tbody td {
-  width: 5em;
-  height: 5em;
+  width: 4em;
+  height: 4em;
   text-align: right;
   vertical-align: top;
   padding: 5px 5px 0 0;
@@ -72,7 +72,6 @@
 }
 
 .calendar .calendar-table tbody td.event .event {
-  padding: 1em;
   background-color: #74a5d7;
 }
 
@@ -86,11 +85,19 @@
     width: 7em;
     height: 7em;
   }
+  
+  .calendar .calendar-table tbody td.event .event {
+    padding: 0.7em;
+  }
 }
 
 @media only screen and (min-width: 900px) {
   .calendar .calendar-table tbody td {
     width: 10em;
     height: 10em;
+  }
+  
+  .calendar .calendar-table tbody td.event .event {
+    padding: 1em;
   }
 }
