--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -82,12 +82,6 @@ header nav .nav-hamburger button:focus, header nav .nav-hamburger button:hover {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
-header nav .nav-hamburger button .nav-hamburger-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-  width: 30px;
-  height: 30px;
-}
-
 header nav .nav-hamburger-icon,
 header nav .nav-hamburger-icon::before,
 header nav .nav-hamburger-icon::after {
@@ -97,6 +91,11 @@ header nav .nav-hamburger-icon::after {
   width: 20px;
 }
 
+header nav .nav-hamburger button .nav-hamburger-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  width: 30px;
+  height: 30px;
+}
 
 header nav[aria-expanded="false"] .nav-hamburger-icon::before {
   top: -6px;
@@ -179,6 +178,19 @@ header nav .nav-sections ul > li > ul {
   margin-top: 0;
 }
 
+header nav .nav-sections > ul > li {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  font-weight: 600;
+  font-size: var(--heading-font-size-l);
+  color: #f3f3f3;
+  padding: 16px 12px 16px 2px;
+  border: none;
+  cursor: pointer;
+  margin: 0 36px;
+}
+
 header nav .nav-sections ul > li > ul > li {
   font-weight: 500;
 }
@@ -203,19 +215,6 @@ header nav .nav-sections .nav-drop {
   position: relative;
   padding: 16px;
   cursor: pointer;
-}
-
-header nav .nav-sections > ul > li {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  font-weight: 600;
-  font-size: var(--heading-font-size-l);
-  color: #f3f3f3;
-  padding: 16px 12px 16px 2px;
-  border: none;
-  cursor: pointer;
-  margin: 0 36px;
 }
 
 /* tools */
@@ -274,23 +273,17 @@ header nav .nav-sections > ul > li > ul > li {
     justify-content: end;
   }
 
-  header nav .nav-sections > ul > li[aria-expanded="true"] > ul a:hover {
-    color: var(--link-hover-color);
-    text-decoration: none;
-  }
-
   header nav .nav-sections>ul>li:not(.nav-drop) a {
     text-decoration: none;
   }
 
-  header nav .nav-sections>ul>li>a:before {
+  header nav .nav-sections>ul>li>a::before {
     content: "";
     position: absolute;
     left: 0;
     right: 0;
     bottom: 6px;
     background: #00aeef;
-    /* KD changed 12-0502019 */
     height: 3px;
     width: 0%;
     transform: translateY(4px);
@@ -298,18 +291,23 @@ header nav .nav-sections > ul > li > ul > li {
     transition-timing-function: ease-out;
   }
 
-  header nav .nav-sections>ul>li> a:hover, header nav .nav-sections>ul>li> a:hover:before {
+  header nav .nav-sections>ul>li>a:hover,
+  header nav .nav-sections>ul>li>a:hover::before {
     width: 140%;
     color: #00aeef;
+  }
+
+  header nav .nav-sections>ul>li[aria-expanded="true"]>ul a:hover {
+    color: var(--link-hover-color);
+    text-decoration: none;
   }
 
   .input-search {
     width: 142px;
   }
-  
+
   .input-search:focus {
     width: 300px;
   }
 
 }
-
