--- a/blocks/aside/aside.css
+++ b/blocks/aside/aside.css
@@ -7,7 +7,7 @@
 
 .aside-block-infographic {
     border-radius: 5px;
-    margin: 0 0 30px 0;
+    margin: 0 0 30px;
     padding: 20px;
     border: 1px solid #707070;
 }
