--- a/styles/styles.css
+++ b/styles/styles.css
@@ -308,11 +308,11 @@ main .section.highlight {
 main .page-title {
   max-width: 1140px;
   margin: auto;
-  padding: 5px 5px 20px 0px;
+  padding: 5px 5px 20px 0;
 }
 
 main .page-title h4 {
-  color: #000000;
+  color: #000;
   font-size: 18px;
   padding: 20px 20px 0;
   margin: 0;
