--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,6 +274,12 @@ main .section.highlight {
 p.article-key-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  border-top: 1px solid #d7d7d7;
+  border-bottom: 1px solid #d7d7d7;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .header-list {
