--- a/styles/styles.css
+++ b/styles/styles.css
@@ -284,6 +284,7 @@ main .section {
     width: 33.3333%;
     margin: unset;
     margin-top: 20px;
+    padding: 20px;
   }
 }
 
@@ -297,6 +298,7 @@ p.article-key-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   border-bottom: 1px solid #d7d7d7;
+  padding-top: 50px;
 }
 
 .header-list {
@@ -313,7 +315,8 @@ p.article-key-container picture {
 
 p.article-key-container .article-preface {
   grid-column: 2 / 2;
-padding-top: 50px;
+  padding-top: 50px;
+  padding-left: 25px;
 }
 
 p.article-key-container .article-key-list{
@@ -321,6 +324,7 @@ p.article-key-container .article-key-list{
   flex-direction: column;
   align-self: center;
   text-align: left;
+  margin-top: 5px;
 }
 
 p.article-key-container .article-key-item {
@@ -333,7 +337,6 @@ p.article-key-container .article-key-title {
   font-size: 14px;
   text-decoration: underline;
   font-weight: 400;
-  padding-bottom: 0;
   padding-left: 40px;
 }
 
@@ -356,7 +359,7 @@ main .page-title h4 a {
   text-decoration: underline;
 }
 
-main .default-content-wrapper {
+body > main > div.section.content-container > div.default-content-wrapper {
   background-color: #fff;
   border-radius: 5px;
   margin: 20px 0 20px 20px;
@@ -373,7 +376,6 @@ main .default-content-wrapper h3 {
   font-size: 15px;
   font-weight: 400;
   margin: 0;
-  padding-bottom: 50px;
 }
 
 /* Hero block styles */
