--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,7 +260,8 @@ main .section {
   main .section.content-container {
     background-color: var(--main-background-color);
     display: flex;
-    width: 1140px;
+    max-width: 1280px;
+    width: 100%;
     margin: auto;
     padding: 0 15px;
     box-sizing: border-box;
@@ -419,6 +420,38 @@ main .section .hero-container {
 .hero-header-image {
   display: none;
 }
+
+/* Ad styles */
+div.top-ad {
+  max-width: 1280px;
+  width: 100%;
+  height: 120px;
+  padding: 0;
+  margin: 0 auto;
+  background-color: #e6e6e6;
+  text-align: center;
+}
+
+div.aside-ad {
+  width: 100%;
+  max-width: 360px;
+  height: 320px;
+  padding: 0;
+  margin: 0 auto;
+  background-color: #e6e6e6;
+  text-align: center;
+}
+
+div.top-ad .ad-title,
+div.aside-ad .ad-title  {
+  font-family: inherit; 
+  color: #333;
+  font-size: .60rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+}
+
 
 @media (max-width: 900px) {
   main .section.hero-header-container {
