--- a/styles/styles.css
+++ b/styles/styles.css
@@ -424,9 +424,10 @@ body noscript.gtm-iframe {
   max-width: 1280px;
   margin: 20px auto 0;
   border-bottom: 7px solid #d7d7d7;
-  padding: 5px 5px 20px 0px;
+  padding: 5px 5px 20px 0;
   box-sizing: border-box;
 }
+
 .section.sponsor img {
   height: 75px;
   max-width: 75px;
