--- a/styles/styles.css
+++ b/styles/styles.css
@@ -420,6 +420,15 @@ body noscript.gtm-iframe {
 }
 
 /* sponsor section styles */
+
+.section.sponsor {
+  display: none;
+}
+
+.section.sponsor[data-section-status="loaded"] {
+  display: block;
+}
+
 .section .sponsor-container {
   max-width: 1280px;
   margin: 20px auto 0;
