--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,19 +1,13 @@
-.video.block .video-container {
-  position: relative;
-  display: block;
-  max-width: 960px;
+.video.block {
+  aspect-ratio: 16 / 9;
 }
 
-.video.block .video-container > div {
-  padding-top: 56.25%;
+.video.block div {
+  width: 100%;
+  height: 100%;
 }
 
 .video.block .video-container iframe {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   width: 100%;
   height: 100%;
 }
