--- a/styles/styles.css
+++ b/styles/styles.css
@@ -353,14 +353,14 @@ main .page-title {
   padding: 5px 5px 20px 0;
 }
 
-main .page-title h4 {
+main .section.page-title h4, main .section.page-title h3 {
   color: #000;
   font-size: 18px;
   padding: 20px 20px 0;
   margin: 0;
 }
 
-main .page-title h4 a {
+main .page-title h4 a, main .page-title h3 a {
   text-decoration: underline;
 }
 
