--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -6,20 +6,30 @@ main .section.hero-container {
   padding: 65px 0;
 }
 
+body.marketing main .section.hero-container {
+  min-height: 500px;
+}
+
 main .section.hero-container h1,
-main .section.hero-container h2 {
+main .section.hero-container h2,
+main .section.hero-container h3 {
   padding: 0 20px;
   color: #fff;
+  text-align: center;
+  line-height: 1.2;
 }
 
 main .section.hero-container h1 {
-  font-size: 32px;
-  line-height: 1.2;
+  font-size: 2.5rem;
 }
 
 main .section.hero-container h2 {
-  line-height: 1.2;
-  font-size: 18px;
+  font-size: 2rem;
+}
+
+main .section.hero-container h3 {
+  font-size: 1.75rem;
+  margin-top: 20px;
 }
 
 main .section.hero-container h1 a {
@@ -41,39 +51,35 @@ main .section .hero {
   margin: auto;
 }
 
+body main .section .hero img {
+  display: block;
+  position: absolute;
+  top: -16px;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+body.marketing main .section .hero img {
+  height: 100%;
+}
+
 main .section .hero-container {
   padding: 0 15px;
 }
 
-.hero img {
-  display: none;
-}
-
 @media (max-width: 900px) {
-  main .section.hero-container {
+  /* main .section.hero-container {
     background-image: url("/images/hero-banner.jpeg");
     background-size: cover;
     background-position: center center;
-  }
+  } */
 }
 
-@media (min-width: 900px) {
-  main .section.hero-container h1 {
-    font-size: 48px;
-  }
-
-  .hero img {
-    display: block;
-    position: absolute;
-    top: -16px;
-    left: 0;
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-    z-index: -1;
-  }
-
+/* @media (min-width: 900px) {
   main .section .hero-container {
     background-image: none;
   }
-}
+} */
