icon-columns and some additional margin

--- a/blocks/icon-columns/icon-columns.css
+++ b/blocks/icon-columns/icon-columns.css
@@ -1,33 +1,65 @@
-.columns > div {
+.section.icon-columns-container,
+.section.icon-columns-container h3 {
+  margin-bottom: 25px;
+}
+
+.section.icon-columns-container h3 {
+  text-align: center;
+  font-size: 1,75rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.icon-columns {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 16px;
+}
+
+.icon-columns > div {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 16px;
 }
 
-.columns img {
-  width: 100%;
+.icon-columns img {
+  min-width: 100px;
 }
 
-.columns > div > div {
+.icon-columns > div > div {
   order: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-.columns > div > .columns-img-col {
+
+.icon-columns > div > .columns-img-col {
   order: 0;
 }
 
-.columns > div > .columns-img-col img {
+.icon-columns > div > .columns-img-col img {
   display: block;
 }
 
 @media (min-width: 900px) {
-  .columns > div {
-    align-items: center;
-    flex-direction: unset;
+  .icon-columns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 32px;
   }
 
-  .columns > div > div {
-    flex: 1;
-    order: unset;
+  .icon-columns > div {
+    flex-direction: row;
+    gap: 32px;
+  }
+
+  .icon-columns img {
+    min-width: 100px;
+  }
+
+  .icon-columns > div > div {
+    text-align: unset;
   }
 }
